--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,20 +1,73 @@
+* {
+	border-radius: 0 !important;
+}
+
 body {
 	background: #343a40;
 	display: none;
 }
 
-.custom-control-label::before {
-	border-color: #dc3545;
-	background-color: #dc3545;
-	outline: none !important;
-	box-shadow: none !important;
+input {
+	background: rgba(0, 0, 0, .25) !important;
+	border-color: transparent !important;
+	color: var(--light) !important;
+	height: 35px !important;
+	font-weight: bold !important;
 }
 
-.custom-control-input:checked~.custom-control-label::before {
-	border-color: #28a745;
-	background-color: #28a745;
+input:focus {
+	box-shadow: 0 0 0 .2rem rgba(255, 255, 255, .25) !important;
 }
 
-.custom-switch .custom-control-label::after {
-	background-color: #ffffff !important;
+button {
+	font-weight: bold !important;
+	border-width: 3px !important;
+}
+
+button:focus {
+	box-shadow: 0 0 0 .2rem rgba(255, 255, 255, .25) !important;
+}
+
+table {
+	background: rgba(0, 0, 0, .2) !important;
+}
+
+td {
+	border: none !important;
+}
+
+caption {
+	font-weight: bold;
+}
+
+.table-wrapper {
+	transition: .3s ease;
+}
+
+.sticky-table {
+	background: rgba(0, 0, 0, .7) !important;
+}
+
+#is-super-salary {
+	position: absolute;
+	left: 100%;
+	top: 0;
+	font-size: 20px;
+	padding: 0 10px;
+	color: rgba(255, 255, 255, .25);
+	background: rgba(0, 0, 0, .2);
+	transition: .3s ease;
+	cursor: pointer;
+}
+
+#is-super-salary:hover {
+	background: rgba(0, 0, 0, .7);
+}
+
+#is-super-salary.stickied {
+	background: rgba(0, 0, 0, .7);
+}
+
+#is-super-salary.active {
+	color: var(--warning);
 }
