--- a/app/css/main.css
+++ b/app/css/main.css
@@ -30,10 +30,15 @@ button:focus {
 
 table {
 	background: rgba(0, 0, 0, .2) !important;
+	overflow: hidden !important;
 }
 
 td {
 	border: none !important;
+}
+
+tr {
+	transition: .3s ease;
 }
 
 caption {
@@ -46,28 +51,4 @@ caption {
 
 .sticky-table {
 	background: rgba(0, 0, 0, .7) !important;
-}
-
-#is-super-salary {
-	position: absolute;
-	left: 100%;
-	top: 0;
-	font-size: 20px;
-	padding: 0 10px;
-	color: rgba(255, 255, 255, .25);
-	background: rgba(0, 0, 0, .2);
-	transition: .3s ease;
-	cursor: pointer;
-}
-
-#is-super-salary:hover {
-	background: rgba(0, 0, 0, .7);
-}
-
-#is-super-salary.stickied {
-	background: rgba(0, 0, 0, .7);
-}
-
-#is-super-salary.active {
-	color: var(--warning);
 }
